--- a/src/app/home/property_caroucel/property-caroucel.component.html
+++ b/src/app/home/property_caroucel/property-caroucel.component.html
@@ -1,4 +1,4 @@
-<ngb-carousel style="height: calc(100% - 100px);">
+<ngb-carousel>
     <ng-template ngbSlide *ngFor="let listPropertyes of properties">
         <div class="row" style="height: 100%;">
             <div class="col" *ngFor="let prop of listPropertyes" style="height: 100%;">
