--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,6 +18,7 @@
         </div>
         <div class="row justify-content-center" style="position: relative;">
             <button class="btn btn-primary">Entrar</button>
+            <a routerLink="/" class="btn btn-primary">Cancelar</a>
         </div>
     </form>
 </div>
