--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,8 @@
-<div class="fixed-center">
+<div class="fix-center">
+    <div class="row justify-content-center">
+        <img src="assets/images/Logo-RR-2-black.png" alt="Logo" height="170px" width="300px">
+    </div>
+
     <div class="row justify-content-center">
         <h3>{{title}}</h3><br>
     </div>
