--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,13 @@
 img.img-caroucel {
     max-width: 100% !important;
 }
+
+ngb-carousel.carousel {
+    height: calc(100% - 100px);
+    background-color: #80808075;
+}
+
+.carousel-inner,
+.carousel-item {
+    height: 100%;
+}
