--- a/src/app/home/property_caroucel/property-caroucel.component.html
+++ b/src/app/home/property_caroucel/property-caroucel.component.html
@@ -1,13 +1,43 @@
-<ngb-carousel>
+<ngb-carousel style="height: calc(100% - 100px);">
     <ng-template ngbSlide *ngFor="let listPropertyes of properties">
-        <div class="row" style="height: 100%;">
-            <div class="col" *ngFor="let prop of listPropertyes" style="height: 100%;">
-                <ngb-carousel #igamesPropertyCaroucel style="height: 50%; width: 100%;" [showNavigationArrows]="showNavigationArrows" [interval]="interval" [pauseOnHover]="pauseOnHover">
+        <div class="row" style="height: 100%; padding: 10px;">
+            <div class="columnBox" *ngFor="let prop of listPropertyes">
+                <ngb-carousel class="innerCaroucel" #igamesPropertyCaroucel [showNavigationIndicators]="showNavigationIndicators" [showNavigationArrows]="showNavigationArrows" [interval]="interval" [pauseOnHover]="pauseOnHover">
                     <ng-template ngbSlide *ngFor="let image of prop.photos">
                         <img src="{{'data:image/png;base64,' + image.file.data}}">
                     </ng-template>
                 </ngb-carousel>
-                <div>{{prop.name}}</div>
+                <div class="propertyDetail">
+                    <h4>{{prop.type}}</h4>
+                    <div class="row">
+                        <div class="col col-12">
+                            {{prop.name}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col col-12">
+                            {{prop.description}}
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col col-12">
+                            <h5>Endereço</h5>
+                        </div>
+                        <div class="col col-12">
+                            {{prop.address.street}} {{prop.address.number}}
+                        </div>
+                        <div class="col col-12">
+                            {{prop.address.neighborhood}} {{prop.address.city.name}}/{{prop.address.city.state.acronym}}
+                        </div>
+                        <div class="col col-12">
+                            {{prop.address.cep}}
+                        </div>
+                        <div class="col col-12">
+                            {{prop.address.complement}}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </ng-template>
