--- a/src/app/home/register/register.component.html
+++ b/src/app/home/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="fixed-center">
+<div class="fixed-center backgroundImage">
 
     <div class="box">
         <div class="row justify-content-md-center">
