--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -5,29 +5,76 @@
 <ngb-tabset #tabSet (tabChange)="beforeChange($event)">
     <ngb-tab id="formTab" title="Dados">
         <ng-template ngbTabContent>
-            <br>
 
+            <fieldset class="fieldSetProperty">
 
-            <form #f="ngForm" (ngSubmit)="save(f)">
-                <div class="row justify-content-md-center">
-                    <div class="form-group ju col col-12 col-md-3">
-                        <label for="name">Nome</label>
-                        <input ngModel name="name" id="name" type="text" class="form-control" required>
-                        <div ngModelGroup="address">
-                            <label for="number">Número</label>
-                            <input ngModel name="number" id="number" type="text" class="form-control" required>
+                <form #f="ngForm" (ngSubmit)="save(f)">
+                    <h3>Dados do Imóvel</h3>
+                    <div class="row justify-content-md-center">
+                        <div class="form-group ju col col-12 col-md-6">
+                            <label for="name">Nome</label>
+                            <input ngModel name="name" id="name" type="text" class="form-control" required>
+                        </div>
+                        <div class="form-group ju col col-12 col-md-6">
+                            <label for="type">Tipo</label>
+                            <select ngModel name="type" id="type" class="form-control" required>
+                                <option value="HOME">Casa</option>
+                                <option value="APARTMENT">Apartamento</option>
+                                <option value="TOWNHOUSE">Condomínio</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group ju col col-12 col-md-12">
+                            <label for="description">Descrição</label>
+                            <textarea ngModel name="description" id="description" type="text" class="form-control" required></textarea>
                         </div>
                     </div>
-                </div>
 
-                <div class="row justify-content-md-center" style="position: relative;">
-                    <button class="btn btn-primary">Salvar</button>
-                </div>
-            </form>
+                    <h3>Endereço</h3>
+                    <span ngModelGroup="address">
+                        <div class="row">
+                            <div class="form-group ju col col-12 col-md-9">
+                                <label for="street">Logradouro</label>
+                                <input ngModel name="street" id="street" type="text" class="form-control" required>
+                            </div>
+                            <div class="form-group ju col col-12 col-md-3">
+                                <label for="number">Número</label>
+                                <input ngModel name="number" id="number" type="number" class="form-control" required>
+                            </div>
+                            <div class="form-group ju col col-12 col-md-8">
+                                <label for="neighborhood">Bairro</label>
+                                <input ngModel name="neighborhood" id="neighborhood" type="text" class="form-control"
+                                    required>
+                            </div>
+                            <div class="form-group ju col col-12 col-md-4">
+                                <label for="cep">CEP</label>
+                                <input ngModel name="cep" id="cep" type="text" class="form-control" required>
+                            </div>
 
+                            <div class="form-group col col-12 col-md-6">
+                                <label for="city">Cidade</label>
+                                <select ngModel name="city" id="city" class="form-control" required>
+                                    <option *ngFor="let c of cities" [ngValue]="c">{{c.name}}/{{c.state.acronym}}
+                                    </option>
+                                </select>
+                            </div>
 
+                            <div class="form-group ju col col-12">
+                                <label for="complement">Complemento</label>
+                                <textarea ngModel name="complement" id="complement" type="text" class="form-control"
+                                    required></textarea>
+                            </div>
+                        </div>
+                    </span>
+
+                    <div class="row justify-content-md-center" style="position: relative;">
+                        <button class="btn btn-primary">Salvar</button>
+                    </div>
+                </form>
+            </fieldset>
         </ng-template>
     </ngb-tab>
+
     <ngb-tab id="imagesTab" title="Enviar Imagens">
         <ng-template ngbTabContent><br>
 
