--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar style="height: 300px; padding: 15px; background-color: #8B0000; margin-bottom: 25px;">
-    <button class="btn btn-primary logout-button" (click)="logout()" *ngIf="isAuth">Sair</button>
+<mat-toolbar class="dashboard-toolbar">
+    <button class="logout-button" (click)="logout()" *ngIf="isAuth">Sair</button>
     <div class="container-fluid">
         <div class="row justify-content-center" style="min-width: 100%;">
             <span class="span-card col-12 col-xl-3 col-lg-4 col-md-5">
