refatorado exibicao das msg

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -34,4 +34,5 @@
     </div>
 </mat-toolbar>
 
+<ngb-alert *ngIf="message" type="success" (close)="message = null">{{ message }}</ngb-alert>
 <router-outlet></router-outlet>
