--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-main-nav>
+    <ngb-alert *ngIf="message" type="success" (close)="message = null">{{ message }}</ngb-alert>
     <span id="banner-section">
         <ngb-carousel>
             <ng-template ngbSlide *ngFor="let image of images">
