--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,10 @@ a.carousel-control-prev.ng-star-inserted:hover,
 a.carousel-control-next.ng-star-inserted:hover {
     opacity: 1 !important;
 }
+
+ngb-alert.alert {
+    z-index: 3;
+    position: fixed;
+    width: 100%;
+    height: 54px;
+}
